<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homeFragmentRoot"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/primary">

    <include
        android:id="@+id/idWebViewInclude"
        layout="@layout/layout_view_webview"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/idTextInclude"
        layout="@layout/layout_view_text_form"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <include
        android:id="@+id/idWifiInclude"
        layout="@layout/layout_view_wifi_form"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/idWebViewInclude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/secondary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/parentMaterialRvHome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="6dp"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idWebViewInclude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/secondary"
        android:layout_marginBottom="55dp"
        android:background="@color/accent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:layout_marginBottom="12dp"/>


    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>