<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">
    <!-- model of a scan item -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/viewItemId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_scanContain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivScanCodeNote"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/ic_read_folder" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleScanItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primaryDark"
                        android:textStyle="bold"
                        tools:text="test text!!!" />

                    <TextView
                        android:id="@+id/tvSubTitleScanItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/SubTitle"
                        android:textSize="11dp"
                        tools:text="text sub text" />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivDeleteScanItem"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/ic_delete" />
                <ImageView
                    android:id="@+id/ivActionScanItem"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="16dp"
                    android:src="@drawable/ic_go_internet" />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </FrameLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        app:dividerColor="@color/secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvItem" />

</androidx.constraintlayout.widget.ConstraintLayout>